Don't blindly subtract a number from an unsigned int, it could overflow (XERCESC-1804)

git-svn-id: https://svn.apache.org/repos/asf/xerces/c/trunk@655703 13f79535-47bb-0310-9956-ffa450edef68